@@ -1,4 +1,4 @@
-.TH SG_READCAP "8" "May 2012" "sg3_utils\-1.36" SG3_UTILS
+.TH SG_READCAP "8" "January 2014" "sg3_utils\-1.38" SG3_UTILS
 .SH NAME
 sg_readcap \- send SCSI READ CAPACITY command
 .SH SYNOPSIS
@@ -157,7 +157,7 @@ outputs version string then exits.
 .SH AUTHORS
 Written by Douglas Gilbert
 .SH COPYRIGHT
-Copyright \(co 1999\-2013 Douglas Gilbert
+Copyright \(co 1999\-2014 Douglas Gilbert
 .br
 This software is distributed under the GPL version 2. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
